docker-registry/k8s/deploy/deployment.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: docker-registry
  name: docker-registry
  namespace: docker-registry
spec:
  selector:
    matchLabels:
      app: docker-registry
  template:
    metadata:
      labels:
        app: docker-registry
    spec:
      containers:
      - image: registry:3
        imagePullPolicy: Always
        name: docker-registry-app
        ports:
        - containerPort: 5000
          protocol: TCP
        volumeMounts:
        - mountPath: /var/lib/registry
          subPath: data
          name: docker-registry-volume
          readOnly: false
        - mountPath: /etc/distribution/config.yml
          subPath: config.yml
          name: docker-registry-config
          readOnly: true
        - mountPath: /auth
          subPath: auth
          name: docker-registry-volume
          readOnly: false
      restartPolicy: Always
      volumes:
      - name: docker-registry-volume
        persistentVolumeClaim:
          claimName: docker-registry-pvc
      - name: docker-registry-config
        configMap:
          name: docker-registry-config
