docker-registry/k8s/deploy/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-cluster-issuer
  name: docker-registry-gateway
  namespace: docker-registry
spec:
  gatewayClassName: traefik
  listeners:
    - name: web
      hostname: docker-registry.localhost
      protocol: HTTPS
      port: 8443
      tls:
        mode: Terminate
        certificateRefs:
          - name: docker-registry-tls
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: docker-registry-http
  namespace: docker-registry
spec:
  parentRefs:
    - name: docker-registry-gateway
      namespace: docker-registry
      sectionName: web
      kind: Gateway
  rules:
     - matches:
        - path:
            type: PathPrefix
            value: /
       backendRefs:
        - name: docker-registry-service
          namespace: docker-registry
          port: 5000
